--- a/omnicell/notebooks/essential_genes_perturbativeness.ipynb
+++ b/omnicell/notebooks/essential_genes_perturbativeness.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
     "from omnicell.evaluation.utils import get_DEGs\n",
     "from omnicell.data.catalogue import Catalogue\n",
-    "\n"
+    "\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -113,12 +114,12 @@
    "source": [
     "pdefault=0.05\n",
     "\n",
-    "significant_degs = degs[degs['pvals_adj'] < pdefault]"
+    "significant_degs = degs[degs['pvals_adj'] < pdefault]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -162,8 +163,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MT-ATP6</th>\n",
-       "      <td>-11.433689</td>\n",
-       "      <td>1.126362e-26</td>\n",
+       "      <td>-11.433704</td>\n",
+       "      <td>1.126166e-26</td>\n",
        "      <td>-0.691263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -185,31 +186,31 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>RTCA-AS1</th>\n",
+       "      <th>TP53</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>EXOC6B</th>\n",
+       "      <th>TOX3</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>RTKN</th>\n",
+       "      <th>TOX2</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>EXOC3L4</th>\n",
+       "      <th>TOX</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>A1CF</th>\n",
+       "      <th>KCTD18</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>1.000000e+00</td>\n",
        "      <td>0.000000</td>\n",
@@ -220,29 +221,42 @@
        "</div>"
       ],
       "text/plain": [
-       "             scores     pvals_adj       lfc\n",
-       "CEBPZ    -12.976492  1.980452e-34 -2.944213\n",
-       "MT-ND2   -12.694564  3.773468e-33 -0.697045\n",
-       "MT-ATP6  -11.433689  1.126362e-26 -0.691263\n",
-       "MT-ND4   -10.565718  1.279024e-22 -0.424049\n",
-       "MT-CO1    -9.334057  2.426523e-17 -0.350309\n",
-       "...             ...           ...       ...\n",
-       "RTCA-AS1   0.000000  1.000000e+00  0.000000\n",
-       "EXOC6B     0.000000  1.000000e+00  0.000000\n",
-       "RTKN       0.000000  1.000000e+00  0.000000\n",
-       "EXOC3L4    0.000000  1.000000e+00  0.000000\n",
-       "A1CF       0.000000  1.000000e+00  0.000000\n",
+       "            scores     pvals_adj       lfc\n",
+       "CEBPZ   -12.976492  1.980452e-34 -2.944213\n",
+       "MT-ND2  -12.694564  3.773468e-33 -0.697045\n",
+       "MT-ATP6 -11.433704  1.126166e-26 -0.691263\n",
+       "MT-ND4  -10.565718  1.279024e-22 -0.424049\n",
+       "MT-CO1   -9.334057  2.426523e-17 -0.350309\n",
+       "...            ...           ...       ...\n",
+       "TP53      0.000000  1.000000e+00  0.000000\n",
+       "TOX3      0.000000  1.000000e+00  0.000000\n",
+       "TOX2      0.000000  1.000000e+00  0.000000\n",
+       "TOX       0.000000  1.000000e+00  0.000000\n",
+       "KCTD18    0.000000  1.000000e+00  0.000000\n",
        "\n",
        "[11907 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "degs"
+    "degs.to_dict(orient='index')\n",
+    "\n",
+    "pd.DataFrame.from_dict(degs.to_dict(orient='index'), orient='index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = {}\n",
+    "res[cell] = {}\n",
+    "res[cell][pert] = degs.to_dict"
    ]
   },
   {
